Pipeline is almost ready to be launched!

--- a/LAB/DEEP_LEARNING/Dataset_Generator/NOTEBOOK_D_Matrix_Grid_Simulator_WORKER_1.ipynb
+++ b/LAB/DEEP_LEARNING/Dataset_Generator/NOTEBOOK_D_Matrix_Grid_Simulator_WORKER_1.ipynb
@@ -28,26 +28,25 @@
    "source": [
     "# Set the PARAMETERS ############################################\n",
     "##################################################################\n",
-    "experiment_name=\"Basler_like_R0_300x_w0_300x_Z_50x_64bit\"\n",
-    "N_R0 = 70 #130\n",
-    "N_w0 = 70 #130\n",
-    "N_Z = 4 #8\n",
+    "experiment_name=\"Basler_like_R0_115x_w0_115x_Z_3x_64bit\"\n",
+    "N_R0 = 115 #70\n",
+    "N_w0 = 115 #70\n",
+    "N_Z = 3 #4\n",
     "\n",
     "output_directory=f\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/{experiment_name}/\"\n",
     "#output_directory=f\"./OUTPUT/LIBRARIES_OF_THEORETICAL_D/{experiment_name}/\"\n",
     "#os.chdir(f\"/home/oiangu/Desktop/Conical_Refraction_Polarimeter/\")\n",
     "\n",
     "randomization_seed=666\n",
-    "image_shortest_side=540\n",
+    "image_shortest_side=541\n",
     "saturation=1\n",
     "\n",
     "# Ring parameters to test (each will be a different simulation)\n",
     "#phiCR_s=np.linspace(-180,180,360*10**significant_decimal+1)*np.pi/180\n",
-    "R0_s=np.linspace(70, 180, N_R0) #np.linspace(70,180,40) # in pxels 153\n",
-    "w0_s=np.linspace( 8, 40, N_w0) #np.linspace(8,50,40) 11\n",
-    "Z_s=np.linspace(0, 0.9, N_Z)\n",
+    "R0_s=np.linspace(110, 180, N_R0) #np.linspace(70,180,40) # in pxels 153\n",
+    "w0_s=np.linspace( 8, 35, N_w0) #np.linspace(8,50,40) 11\n",
+    "Z_s=np.linspace(0, 0.05, N_Z)\n",
     "rho_0s=R0_s/w0_s\n",
-    "\n",
     "\n",
     "resolution_side_nx=image_shortest_side # generated images will be resolution_side x resolution_side\n",
     "# Other parameters\n",
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -139,13 +138,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[####################################################################################################] 100.0% \n",
+      "[                                                                                                    ] 0.7628% \n",
       "\n",
-      "Simulated: 9801/9800\n",
-      "Elapsed time: 9.0 h 22.0 min -491.9 s\n",
-      "\n",
-      "\n",
-      "WORKER 1 FINISHED!!!\n"
+      "Simulated: 150/19665\n",
+      "Elapsed time: 0.0 h 50.0 min 38.61 s\n"
      ]
     }
    ],
@@ -227,25 +223,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Not a file or file object (not a file or file object)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_3125/2543997712.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflush\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/h5py/_hl/files.py\u001b[0m in \u001b[0;36mflush\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    450\u001b[0m         \"\"\"\n\u001b[1;32m    451\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mphil\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 452\u001b[0;31m             \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflush\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    453\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    454\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mwith_phil\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mh5py/_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mh5py/_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mh5py/h5f.pyx\u001b[0m in \u001b[0;36mh5py.h5f.flush\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Not a file or file object (not a file or file object)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "h5f.flush()\n",
     "h5f.close()"
