--- a/LAB/DEEP_LEARNING/Manifold Learning/Optimal_Dimensionality_Determination.ipynb
+++ b/LAB/DEEP_LEARNING/Manifold Learning/Optimal_Dimensionality_Determination.ipynb
@@ -41,17 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-06-15 17:18:22.140618: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.10.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "import numpy as np\n",
@@ -84,20 +76,31 @@
     "        label = torch.Tensor([float(self.df_GTs.iloc[idx, 1])]).type(torch.float32) #[1] torch tensor of float32\n",
     "        return image, label\n",
     "    \n",
-    "# Train set Input!\n",
-    "GT_file_path_train = f\"/home/oiangu/Desktop/Conical_Refraction_Polarimeter/OUTPUT/NOISY/TRAIN/GROUND_TRUTHS.json\"\n",
-    "images_dir_path_train =f\"/home/oiangu/Desktop/Conical_Refraction_Polarimeter/OUTPUT/NOISY/TRAIN/\" \n",
+    "# Noisy Train set!\n",
+    "GT_file_path_train_noisy = f\"/home/oiangu/Desktop/Conical_Refraction_Polarimeter/OUTPUT/NOISY/TRAIN/GROUND_TRUTHS.json\"\n",
+    "images_dir_path_train_noisy =f\"/home/oiangu/Desktop/Conical_Refraction_Polarimeter/OUTPUT/NOISY/TRAIN\"\n",
     "\n",
-    "GT_file_path_test = f\"/home/oiangu/Desktop/Conical_Refraction_Polarimeter/OUTPUT/NOISY/TEST/GROUND_TRUTHS.json\"\n",
-    "images_dir_path_test =f\"/home/oiangu/Desktop/Conical_Refraction_Polarimeter/OUTPUT/NOISY/TEST\"\n",
+    "# Non-Noisy Train set!\n",
+    "GT_file_path_train_non_noisy = f\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/IMAGE_LIBRARY/NON_NOISY/TEST/GROUND_TRUTHS.json\"\n",
+    "images_dir_path_train_non_noisy = f\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/IMAGE_LIBRARY/NON_NOISY/TEST\"\n",
     "\n",
-    "num_images=1000\n",
-    "num_images_test = 500  # for the UMAP and NNE curve\n",
+    "# Test set\n",
+    "GT_file_path_test_noisy = f\"/home/oiangu/Desktop/Conical_Refraction_Polarimeter/OUTPUT/NOISY/TEST/GROUND_TRUTHS.json\"\n",
+    "images_dir_path_test_noisy =f\"/home/oiangu/Desktop/Conical_Refraction_Polarimeter/OUTPUT/NOISY/TEST\"\n",
+    "\n",
+    "# Non-Noisy Train set!\n",
+    "GT_file_path_test_non_noisy = f\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/IMAGE_LIBRARY/NON_NOISY/TEST/GROUND_TRUTHS.json\"\n",
+    "images_dir_path_test_non_noisy = f\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/IMAGE_LIBRARY/NON_NOISY/TEST\"\n",
+    "\n",
+    "use_noisy=False\n",
+    "\n",
+    "num_images=2000\n",
+    "num_images_test = 700  # for the UMAP and NNE curve\n",
     "\n",
     "num_decimals = 2\n",
     "random_seed = 666\n",
     "n_jobs=10\n",
-    "exp_name=\"Noisy_Dataset\"\n",
+    "exp_name=\"Non_Noisy_Dataset\"\n",
     "\n",
     "emb_dims= [1,2,3,4,5,6,7,8,10,15,20] #[1,2,3,4,5,7,10,13,16,20]\n",
     "\n",
@@ -107,12 +110,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "training_data = ImageDataset(GT_file_path_train, images_dir_path_train)\n",
-    "test_data = ImageDataset(GT_file_path_test, images_dir_path_test)"
+    "if use_noisy:\n",
+    "    training_data = ImageDataset(GT_file_path_train_noisy, images_dir_path_train_noisy)\n",
+    "    test_data = ImageDataset(GT_file_path_test_noisy, images_dir_path_test_noisy)\n",
+    "else:\n",
+    "    training_data = ImageDataset(GT_file_path_train_non_noisy, images_dir_path_train_non_noisy)\n",
+    "    test_data = ImageDataset(GT_file_path_test_non_noisy, images_dir_path_test_non_noisy)"
    ]
   },
   {
@@ -228,9 +237,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [8]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    126\u001b[0m     plt\u001b[38;5;241m.\u001b[39mshow()  \n\u001b[1;32m    128\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 129\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m\n",
+      "\u001b[0;31mValueError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "if current_state == 0:\n",
     "    # MDS\n",
@@ -255,7 +276,7 @@
     "    plt.savefig(f\"{save_stuff_path}/MDS_stress_{exp_name}.png\")\n",
     "    plt.show()\n",
     "    \n",
-    "elif current_state == 1:\n",
+    "elif current_state == 1000:\n",
     "    # LLE\n",
     "    args = {'exp':'LLE_standard',\"method\":\"standard\", \"n_neighbors\": 50,\"emb_dims\": emb_dims, 'max_iter':50}\n",
     "    # Methods: standard, hessian, ltsa, modified (modified_tol) \n",
@@ -329,7 +350,7 @@
     "    plt.show()\n",
     "    \n",
     "elif current_state == 3:\n",
-    "    args_sk_KNN = {'n_neighbors':5, 'weights':'uniform', 'algorithm':'auto', 'leaf_size':20, 'p':2,\n",
+    "    args_sk_KNN = {'n_neighbors':5, 'weights':'uniform', 'algorithm':'auto', 'leaf_size':30, 'p':2,\n",
     "               'metric':'minkowski', 'n_jobs':n_jobs}\n",
     "\n",
     "    # NCA\n",
@@ -361,15 +382,6 @@
     "\n",
     "else:\n",
     "    raise ValueError"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "20*(20+3)/2"
    ]
   },
   {
