--- a/LAB/ANALYSIS_SCRIPTS/NOTEBOOK_Pipeline_to_Compare_Non_Embedding_Algorithms.ipynb
+++ b/LAB/ANALYSIS_SCRIPTS/NOTEBOOK_Pipeline_to_Compare_Non_Embedding_Algorithms.ipynb
@@ -3414,7 +3414,7 @@
     "# List the Algorithms to test\n",
     "for exp_name in exp_names:\n",
     "    table_per_image[exp_name], table_per_alg[exp_name] = run_benchmark_output_result_histograms_and_result_table(\\\n",
-    "        algorithm_lambda_list=algorithm_lambda_list[:10], algorithm_name_list=algorithm_name_list[:10],\\\n",
+    "        algorithm_lambda_list=algorithm_lambda_list, algorithm_name_list=algorithm_name_list,\\\n",
     "         references=X_references, problems=X_problems, image_pair_names=image_pair_names,\\\n",
     "        generate_algorithm_plots=False,\\\n",
     "        generate_histograms=True, boots_samples=boots_samples, confidence=confidence,\\\n",
