Pipeline to compare embedding and simulation algorithms ready and fully functional!

--- a/LAB/ANALYSIS_SCRIPTS/NOTEBOOK_Pipeline_to_Compare_Algorithms.ipynb
+++ b/LAB/ANALYSIS_SCRIPTS/NOTEBOOK_Pipeline_to_Compare_Algorithms.ipynb
@@ -3760,6 +3760,57 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "302-270"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 604, 604])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=torch.ones((1,541,541))\n",
+    "X=302\n",
+    "torch.nn.functional.pad(a, (31,32,31,32), mode='constant', value=0).shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
