Updated Pipeline functions

--- a/LAB/ANALYSIS_SCRIPTS/NOTEBOOK_Pipeline_to_Compare_Non_Embedding_Algorithms.ipynb
+++ b/LAB/ANALYSIS_SCRIPTS/NOTEBOOK_Pipeline_to_Compare_Non_Embedding_Algorithms.ipynb
@@ -105,10 +105,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 2 1\n"
+     "ename": "NameError",
+     "evalue": "name 'hey' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 21>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m     current_meta_block \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m current_meta_block\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m2\u001b[39m:\n\u001b[0;32m---> 22\u001b[0m     \u001b[43mhey\u001b[49m\n\u001b[1;32m     23\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28mprint\u001b[39m(current_meta_block, current_block, current_sub_block)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'hey' is not defined"
      ]
     }
    ],
@@ -133,7 +137,8 @@
     "    current_sub_block = 1\n",
     "    current_meta_block = 1\n",
     "\n",
-    "if current_meta_block>3:\n",
+    "if current_meta_block>2:\n",
+    "    hey\n",
     "    raise ValueError\n",
     "    \n",
     "print(current_meta_block, current_block, current_sub_block)"
@@ -141,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,17 +160,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using device cuda:0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import json as json\n",
@@ -197,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,19 +262,21 @@
     "    #plt.close()\n",
     "\n",
     "\n",
+    "times = {}\n",
+    "predicted_delta_phiCRs = {}\n",
     "\n",
     "def run_benchmark_output_result_histograms_and_result_table( algorithm_lambda_list, algorithm_name_list,\n",
     "                                            references, problems, image_pair_names, generate_algorithm_plots,\n",
     "                                            generate_histograms, boots_samples=10000, confidence=95,\n",
     "                                            output_units='rad', ground_truths=None, GT_units=None,\n",
     "                                            GT_nature = 'phiCR',\n",
-    "                                            experiment_name = None, output_path=None, batch_size=200):\n",
+    "                                            experiment_name = None, output_path=None, batch_size=50):\n",
     "    if experiment_name is not None:\n",
     "        output_path = f\"{output_path}/{experiment_name}/\"\n",
     "        os.makedirs(output_path, exist_ok=True)\n",
     "    # GTs should be in [-pi, pi] or [-180, 180]\n",
-    "    times = {}\n",
-    "    predicted_delta_phiCRs = {}\n",
+    "    global times\n",
+    "    global predicted_delta_phiCRs\n",
     "    \n",
     "    conv = 180/np.pi if output_units=='deg' else 1\n",
     "    convGT = 180/np.pi if (output_units=='deg' and GT_units=='rad') else \\\n",
@@ -292,15 +291,19 @@
     "        \n",
     "        predicted_delta_phiCRs[alg_name]={}\n",
     "        times[alg_name]={}\n",
-    "        \n",
-    "        for j in range(0, references.shape[0], batch_size):\n",
-    "        \n",
-    "            batch_predicted_delta_phiCRs, batch_times =  algorithm(\n",
-    "                    references[j:(j+batch_size)], problems[j:(j+batch_size)], \n",
-    "                    image_pair_names[j:(j+batch_size)], dir_for_alg)\n",
-    "            predicted_delta_phiCRs[alg_name].update(batch_predicted_delta_phiCRs)\n",
-    "            times[alg_name].update(batch_times)\n",
-    "            free()\n",
+    "        try: # por si por ejemplo ransac no encuentra ningun consenso y salta un error\n",
+    "            for j in range(0, references.shape[0], batch_size):\n",
+    "\n",
+    "                batch_predicted_delta_phiCRs, batch_times =  algorithm(\n",
+    "                        references[j:(j+batch_size)], problems[j:(j+batch_size)], \n",
+    "                        image_pair_names[j:(j+batch_size)], dir_for_alg)\n",
+    "                predicted_delta_phiCRs[alg_name].update(batch_predicted_delta_phiCRs)\n",
+    "                times[alg_name].update(batch_times)\n",
+    "                free()\n",
+    "        except:\n",
+    "            for imn in image_pair_names:\n",
+    "                predicted_delta_phiCRs[alg_name][imn]=0\n",
+    "                times[alg_name][imn]=0\n",
     "        \n",
     "        print(f\" - Algorithm {alg_name} done!\")\n",
     "        try: # for the Carles algorithm to receive different arguments with a lambda function, en fin\n",
@@ -398,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1071,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1129,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1353,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1389,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1553,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1671,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1795,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2090,7 +2093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2136,7 +2139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -2672,7 +2675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2682,7 +2685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2707,7 +2710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2723,7 +2726,7 @@
     "\n",
     "\n",
     "\n",
-    "num_image_pairs_test = 1000\n",
+    "num_image_pairs_test = 800\n",
     "\n",
     "\n",
     "\n",
@@ -2735,7 +2738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2786,7 +2789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2830,25 +2833,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "> Passing Images from each Algorithm...\n",
-      " - Algorithm Blazq_CosSq_w0_ransacTrue_deltaFromGravTrue_NM_Noisy_DS done!\n",
-      " - Algorithm Blazq_CosSq_w0_ransacTrue_deltaFromGravTrue_P_Noisy_DS done!\n",
-      " - Algorithm Blazq_CosSq_w0_ransacTrue_deltaFromGravTrue_NM_Noisy_DS done!\n",
-      " - Algorithm Blazq_CosSq_w0_ransacTrue_deltaFromGravTrue_P_Noisy_DS done!\n",
-      " - Algorithm Blazq_CosSq_w0.999_ransacTrue_deltaFromGravTrue_NM_Noisy_DS done!\n",
-      " - Algorithm Blazq_CosSq_w0.999_ransacTrue_deltaFromGravTrue_P_Noisy_DS done!\n",
-      " - Algorithm Blazq_CosSq_w0.9999_ransacTrue_deltaFromGravTrue_NM_Noisy_DS done!\n",
-      " - Algorithm Blazq_CosSq_w0.9999_ransacTrue_deltaFromGravTrue_P_Noisy_DS done!\n",
-      " - Algorithm Blazq_CosSq_w1_ransacTrue_deltaFromGravTrue_NM_Noisy_DS done!\n",
-      " - Algorithm Blazq_CosSq_w1_ransacTrue_deltaFromGravTrue_P_Noisy_DS done!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%skip $dont_use_simulated\n",
     "\n",
