--- a/LAB/DEEP_LEARNING/Dataset_Generator/NOTEBOOK_D_Matrix_Grid_Simulator_WORKER_0.ipynb
+++ b/LAB/DEEP_LEARNING/Dataset_Generator/NOTEBOOK_D_Matrix_Grid_Simulator_WORKER_0.ipynb
@@ -10,14 +10,14 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_11910937781003946057() {\n",
+       "            function code_toggle_9480056218057074068() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_11910937781003946057()\">Toggle show/hide</a>\n",
+       "        <a href=\"javascript:code_toggle_9480056218057074068()\">Toggle show/hide</a>\n",
        "    "
       ],
       "text/plain": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -219,10 +219,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[##################################                                                                  ] 34.23% \n",
+      "[####################################################################################################] 100.0% \n",
       "\n",
-      "Simulated: 6850/20010\n",
-      "Elapsed time: 19.0 h 54.0 min -1.113e+03 s\n"
+      "Simulated: 20011/20010\n",
+      "Elapsed time: 95.0 h 36.0 min -5.671e+03 s\n",
+      "\n",
+      "\n",
+      "WORKER 0 FINISHED!!!\n"
      ]
     }
    ],
@@ -304,9 +307,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Not a file or file object (not a file or file object)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [11]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mh5f\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mflush\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m h5f\u001b[38;5;241m.\u001b[39mclose()\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.8/site-packages/h5py/_hl/files.py:561\u001b[0m, in \u001b[0;36mFile.flush\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    558\u001b[0m \u001b[38;5;124;03m\"\"\" Tell the HDF5 library to flush its buffers.\u001b[39;00m\n\u001b[1;32m    559\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    560\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m phil:\n\u001b[0;32m--> 561\u001b[0m     \u001b[43mh5f\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mflush\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mid\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32mh5py/_objects.pyx:54\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mh5py/_objects.pyx:55\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mh5py/h5f.pyx:164\u001b[0m, in \u001b[0;36mh5py.h5f.flush\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Not a file or file object (not a file or file object)"
+     ]
+    }
+   ],
    "source": [
     "h5f.flush()\n",
     "h5f.close()"
@@ -321,9 +340,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Worker 0 done!\n",
+      "Worker 1 done!\n"
+     ]
+    }
+   ],
    "source": [
     "#raise ValueError\n",
     "# Open the big h5f that will contain all of the parts\n",
