--- a/LAB/DEEP_LEARNING/Dataset_Generator/NOTEBOOK_D_Matrix_Grid_Simulator_WORKER_1.ipynb
+++ b/LAB/DEEP_LEARNING/Dataset_Generator/NOTEBOOK_D_Matrix_Grid_Simulator_WORKER_1.ipynb
@@ -138,23 +138,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[##################                                                                                  ] 18.05% \n",
+      "[####################################################################################################] 100.0% \n",
       "\n",
-      "Simulated: 3550/19665\n",
-      "Elapsed time: 20.0 h 10.0 min -1.169e+03 s\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [5]\u001b[0m, in \u001b[0;36m<cell line: 30>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     33\u001b[0m ID\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mR0_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mstr\u001b[39m(R0)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_w0_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mstr\u001b[39m(w0)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_Z_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mstr\u001b[39m(Z)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     34\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m ID \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m phase_vigilant[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIDs\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[1;32m     35\u001b[0m     \u001b[38;5;66;03m# simulate matrix\u001b[39;00m\n\u001b[0;32m---> 36\u001b[0m     D_matrix \u001b[38;5;241m=\u001b[39m \u001b[43msimulator\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompute_pieces_for_I_LP\u001b[49m\u001b[43m(\u001b[49m\u001b[43mR0_pixels\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mR0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mZ\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mZ\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mw0_pixels\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mw0\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     38\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m D_matrix \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     39\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m\n",
-      "File \u001b[0;32m~/Desktop/Conical_Refraction_Polarimeter/SOURCE/CLASS_CODE_GPU_Classes.py:204\u001b[0m, in \u001b[0;36mRingSimulator_Optimizer_GPU.compute_pieces_for_I_LP\u001b[0;34m(self, R0_pixels, Z, w0_pixels)\u001b[0m\n\u001b[1;32m    203\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcompute_pieces_for_I_LP\u001b[39m(\u001b[38;5;28mself\u001b[39m, R0_pixels, Z, w0_pixels):\n\u001b[0;32m--> 204\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_compute_B0_B1\u001b[49m\u001b[43m(\u001b[49m\u001b[43mZ\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mR0_pixels\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mw0_pixels\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    205\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m pieces_for_I_LP(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mB0, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mB1)\n",
-      "File \u001b[0;32m~/Desktop/Conical_Refraction_Polarimeter/SOURCE/CLASS_CODE_GPU_Classes.py:190\u001b[0m, in \u001b[0;36mRingSimulator_Optimizer_GPU._compute_B0_B1\u001b[0;34m(self, Z, R0, w0)\u001b[0m\n\u001b[1;32m    186\u001b[0m rs_block\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m1\u001b[39m\u001b[38;5;241m/\u001b[39mw0)\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrs[\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchunks_x[ix]:\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchunks_x[ix\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m], \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchunks_y[iy]:\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchunks_y[iy\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m]]\n\u001b[1;32m    187\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mB0\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mB0\u001b[38;5;241m.\u001b[39mat[ \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchunks_x[ix]:\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchunks_x[ix\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m], \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchunks_y[iy]:\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchunks_y[iy\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m]]\u001b[38;5;241m.\u001b[39mset(\n\u001b[1;32m    188\u001b[0m compute_B0_block( \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39ma0, R0\u001b[38;5;241m/\u001b[39mw0, rs_block, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mks, Z, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdk, jax\u001b[38;5;241m.\u001b[39mdevice_put(j0(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mks\u001b[38;5;241m*\u001b[39mrs_block))  ))\u001b[38;5;66;03m#[ny, nx, 1]\u001b[39;00m\n\u001b[1;32m    189\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mB1\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mB1\u001b[38;5;241m.\u001b[39mat[ \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchunks_x[ix]:\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchunks_x[ix\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m], \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchunks_y[iy]:\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchunks_y[iy\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m]]\u001b[38;5;241m.\u001b[39mset(\n\u001b[0;32m--> 190\u001b[0m compute_B1_block( \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39ma0, R0\u001b[38;5;241m/\u001b[39mw0, rs_block, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mks, Z, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdk, jax\u001b[38;5;241m.\u001b[39mdevice_put(\u001b[43mj1\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mks\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mrs_block\u001b[49m\u001b[43m)\u001b[49m)  ))\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Simulated: 19666/19665\n",
+      "Elapsed time: 75.0 h 12.0 min -4.477e+03 s\n",
+      "\n",
+      "\n",
+      "WORKER 1 FINISHED!!!\n"
      ]
     }
    ],
@@ -236,9 +226,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Not a file or file object (not a file or file object)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [8]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mh5f\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mflush\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m h5f\u001b[38;5;241m.\u001b[39mclose()\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.8/site-packages/h5py/_hl/files.py:561\u001b[0m, in \u001b[0;36mFile.flush\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    558\u001b[0m \u001b[38;5;124;03m\"\"\" Tell the HDF5 library to flush its buffers.\u001b[39;00m\n\u001b[1;32m    559\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    560\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m phil:\n\u001b[0;32m--> 561\u001b[0m     \u001b[43mh5f\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mflush\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mid\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32mh5py/_objects.pyx:54\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mh5py/_objects.pyx:55\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mh5py/h5f.pyx:164\u001b[0m, in \u001b[0;36mh5py.h5f.flush\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Not a file or file object (not a file or file object)"
+     ]
+    }
+   ],
    "source": [
     "h5f.flush()\n",
     "h5f.close()"
